--- a/src/css/rodape.css
+++ b/src/css/rodape.css
@@ -1,5 +1,28 @@
 .footer{
     display: flex;
     justify-content: space-between;
-    background-color: black;
+    align-items: center;
+    background-color: #000;
+    height: 150px;
+}
+.footer p{
+    display: flex;
+    align-items: center;
+    color: white;
+}
+.lista-footer ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 3rem;
+
+}
+.lista-footer li{
+    list-style: none;
+   
+}
+.lista-footer{
+    display: flex;
+    align-items: center;
+    padding-right: 2px;
 }
