--- a/src/css/cabecalho.css
+++ b/src/css/cabecalho.css
@@ -1,4 +1,30 @@
 .header{
     display: flex;
     justify-content: space-between;
+    height: 150px;
+}
+nav{
+    padding-right: 1rem;
+    padding-top: 0.5rem;
+}
+.btn-cabecalho-1{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 0.7rem;
+}
+.btn-cabecalho-2{
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+    
+}
+.btn-cabecalho{
+    border-radius: 8px;
+    background-color: aqua;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.493);
+    width: 7rem;
+    height: 2rem;
+}
+.link{
+    text-decoration: none;
 }
