--- a/src/css/cabecalho.css
+++ b/src/css/cabecalho.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     height: 150px;
+    background-color: #000;
 }
 nav{
     padding-right: 1rem;
@@ -11,11 +12,14 @@ nav{
     display: flex;
     justify-content: space-around;
     padding-bottom: 0.7rem;
+    gap: 8px;
+    
 }
 .btn-cabecalho-2{
     display: flex;
     justify-content: space-around;
-    gap: 10px;
+    gap: 8px;
+
     
 }
 .btn-cabecalho{
@@ -24,7 +28,10 @@ nav{
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.493);
     width: 7rem;
     height: 2rem;
+    
+    
 }
 .link{
     text-decoration: none;
+    ;
 }
