Alteração do css da página cabecalho.

--- a/src/css/cabecalho.css
+++ b/src/css/cabecalho.css
@@ -4,6 +4,9 @@
     height: 150px;
     background-color: #000;
 }
+.logo-pedal-seguro{
+    height: 150px;
+}
 nav{
     padding-right: 1rem;
     padding-top: 0.5rem;
