--- a/src/css/cabecalho.css
+++ b/src/css/cabecalho.css
@@ -10,29 +10,24 @@
 nav{
     padding-right: 1rem;
     padding-top: 0.5rem;
+    
 }
 .btn-cabecalho-1{
     display: flex;
-    justify-content: space-around;
+    justify-items: center;
     padding-bottom: 0.7rem;
-    gap: 8px;
+    gap: 1.4rem;
+    margin-top: 2.7rem;
+    margin-right: 4rem;
     
-}
-.btn-cabecalho-2{
-    display: flex;
-    justify-content: space-around;
-    gap: 8px;
-
     
 }
 .btn-cabecalho{
     border-radius: 8px;
-    background-color: aqua;
+    background-color: #14A3F6;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.493);
     width: 7rem;
-    height: 2rem;
-    
-    
+    height: 2rem;  
 }
 .link{
     text-decoration: none;
