--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,73 +1,61 @@
 .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height:60vh;
-    background-color: #f0f0f0;
-  }
-  
-  .login-form {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    max-width: 400px;
-    text-align: center;
-  }
-  
-  .login-form h2 {
-    margin-bottom: 20px;
-    color: #333;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-    text-align: left;
-  }
-  
-  label {
-    font-weight: bold;
-  }
-  
-  input[type="email"],
-  input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  button[type="submit"] {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-  }
-  
-  button[type="submit"]:hover {
-    background-color: #0056b3;
-  }
-  
-  .error-message {
-    color: #ff0000;
-    margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  background-color: #f0f0f0;
+}
+
+.login-form {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  max-width: 400px;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .login-container {
+      height: auto;
+      padding: 20px;
   }
 
-.mostrar-senha-button {
-    background-color: transparent;
-    border: none;
-    font-size: 14px;
-    cursor: pointer;
-    color: #007bff; 
-    text-decoration: underline;
-    margin-left: 10px;
-}
-  
-  .mostrar-senha-button:hover {
-    text-decoration: none;
+  .login-form {
+      max-width: 100%;
   }
-  
+}
+
+@media (max-width: 480px) {
+  .login-container {
+      height: auto;
+      padding: 20px;
+  }
+
+  .login-form {
+      max-width: 100%;
+      padding: 10px;
+  }
+
+  .form-group {
+      text-align: left;
+  }
+
+  input[type="email"],
+  input[type="password"] {
+      width: 90%;
+      padding: 10px;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+  }
+
+  button[type="submit"] {
+      padding: 10px 20px;
+  }
+
+  .mostrar-senha-button {
+      margin-top: 10px;
+  }
+}
